fix illegible inline code with monkai

--- a/_sass/sass-code-highlight/monokai.scss
+++ b/_sass/sass-code-highlight/monokai.scss
@@ -128,9 +128,10 @@ $background: #272822;
 }
 
 code{
-  background-color: "#282C34";
-  color: whitesmoke;}
+  background-color: #282C34;
+  color: whitesmoke;
+}
 pre {
-  background-color: "#282C34";
+  background-color: #282C34;
   color: whitesmoke;
 }
